# RUST_RnD_ff_parser

./: .gitignore  Cargo.toml  LOG_accel_GX010463_WCut.MP4.txt  LOG_accel_GX011849.MP4.txt  LOG_accel_GX018420.MP4.txt  LOG_accel_GX018422.MP4.txt  LOG_accel_GX019341.MP4.txt  LOG_accel_GX019345.MP4.txt  LOG_accel_ev_wrong_GH011013.MP4.txt  config.toml  example_config.toml  max_accel_ES_OK_GX018663.MP4.txt  max_accel_ES_OK_GX018665.MP4.txt  max_accel_GX010463_WCut.MP4.txt  max_accel_GX011849.MP4.txt  max_accel_GX018420.MP4.txt  max_accel_GX018422.MP4.txt  max_accel_GX019303.MP4.txt  max_accel_GX019331.MP4.txt  max_accel_ev_wrong_GH011013.MP4.txt  max_accel_АндрейGH010966.MP4.txt  sensor_data.txt  sma_accel_ev_wrong_GH011013.MP4.txt  test_x.txt  test_y.txt  test_z.txt
gpmf-rs/: CHANGELOG.md  Cargo.toml  README.md
gpmf-rs/src/: errors.rs  files.rs  lib.rs
gpmf-rs/src/content_types/: data_types.rs  mod.rs
gpmf-rs/src/content_types/gps/: gps.rs  mod.rs  point.rs
gpmf-rs/src/content_types/sensor/: mod.rs  orientation.rs  sensor_data.rs  sensor_field.rs  sensor_quantifier.rs  sensor_type.rs
gpmf-rs/src/gopro/: device_id.rs  device_name.rs  file.rs  filetype.rs  meta.rs  mod.rs  session.rs
gpmf-rs/src/gpmf/: fourcc.rs  gpmf.rs  header.rs  mod.rs  stream.rs  timestamp.rs  value.rs
src/: _main.rs  analise.rs  analise_ev_rnd.rs  analise_log_v.rs  cli_clonfig.rs  cli_config.rs  ffmpeg_serv.rs  file_sys_serv.rs  gpmf_serv.rs  gui_iced.rs  macros.rs  main.rs  plot_serv.rs  prelude.rs  telemetry_analysis.rs  telemetry_parser_serv.rs
src/utils/: error.rs  u_serv.rs
telemetry_parser/: Cargo.toml
telemetry_parser/src/: filesystem.rs  lib.rs  tags.rs  tags_impl.rs  util.rs
telemetry_parser/src/ardupilot/: bin.rs  csv.rs
telemetry_parser/src/blackbox/: binary.rs  csv.rs  mod.rs
telemetry_parser/src/blackmagic/: mod.rs
telemetry_parser/src/camm/: mod.rs
telemetry_parser/src/cooke/: bin.rs  mod.rs
telemetry_parser/src/dji/: csv.rs  mod.rs
telemetry_parser/src/esplog/: mod.rs
telemetry_parser/src/freefly/: mod.rs
telemetry_parser/src/gopro/: klv.rs  mod.rs
telemetry_parser/src/insta360/: mod.rs  record.rs
telemetry_parser/src/kandao/: mod.rs
(+16 files in other folders)
