[package]
name = "gpmf_parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"



[dependencies]
thiserror = "1.0.61"
serde = { version = "1", features = ["derive"] }
config = { version = "0.11", features = ["toml"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
toml = { version = "0.5" }
gpmf-rs = { path = "./gpmf-rs" }
telemetry_parser = { path = "./telemetry_parser" }

rfd = "0.14"
crossbeam-channel = "0.5.13"
serde_json = "1.0.118"
